navbar bug fixed(BUG:Content disappeared behind navbar)

--- a/app/scss/dashboard.scss
+++ b/app/scss/dashboard.scss
@@ -4,6 +4,7 @@ body {
 .content-container {
   padding: 28px 35px;
   margin-left: 232px;
+  margin-top: 70px;
   display: flex;
   flex-direction: column;
   h3 {
