--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,8 @@
   padding-right: 0px;
   position: fixed;
   top: 0;
-  width: 100%; }
+  width: 100%;
+  height: 70px; }
 
 #navbarSymbols {
   margin-left: auto; }
@@ -78,6 +79,7 @@ body {
 .content-container {
   padding: 28px 35px;
   margin-left: 232px;
+  margin-top: 70px;
   display: flex;
   flex-direction: column; }
   .content-container h3 {
